# VLA-training

./: .gitignore  .pre-commit-config.yaml  README.md  REMOTE_SETUP.md  TRAINING_GUIDE.md  implementation.md  pyproject.toml  requirements-dev.txt  requirements.txt  training-plan.md
ci/: README.md
configs/: phase_a.json  phase_b.json
configs/specs/: mechalabs.yaml
scripts/: bootstrap_rocm.sh  check_env.py  check_structure.py  debug_import.py  download_mechalabs.py  fix_imports.sh  prepare_data_and_cache.py  prepare_data_and_cache.sh  prepare_lekiwi.py  test_import.py
src/vla_training/: __init__.py
src/vla_training/cli/: compute_norms.py  eval.py  train.py  validate.py
src/vla_training/data/: __init__.py  dataset.py  norms.py  spec.py  transforms.py  validator.py
src/vla_training/eval/: offline.py
src/vla_training/train/: __init__.py  config.py  runner.py
src/vla_training/utils/: wandb.py
tests/: __init__.py  conftest.py  test_dataloader.py  test_validation_and_norms.py
